// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer with default 1`] = `
.c2 {
  padding: 0 8px;
  margin-right: 12px;
  line-height: 28px;
  vertical-align: middle;
  color: #ccc;
  font-size: 22px;
  font-family: 'Rajdhani',sans-serif;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  border-color: #4078c0;
}

.c0 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 24px 0;
  margin-top: 36px;
  border-top: 1px solid #eee;
  color: #767676;
  font-size: 12px;
}

.c1 > ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.c1 > ul > li {
  display: inline-block;
}

.c1 > ul > li + li {
  margin-left: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul>
      <li>
        © 2016 keik
      </li>
      <li>
        <a
          href="#"
        >
          Help
        </a>
      </li>
    </ul>
    <a
      className="c2"
      href="#"
    >
      GH
    </a>
    <ul>
      <li>
        <a
          href="#"
        >
          API
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          About
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Header with default 1`] = `
.c1 {
  padding: 0 8px;
  margin-right: 12px;
  line-height: 28px;
  vertical-align: middle;
  color: #ccc;
  font-size: 22px;
  font-family: 'Rajdhani',sans-serif;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  border-color: #4078c0;
}

.c3 > * + * {
  margin-left: 12px;
}

.c4 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  display: inline-block;
  color: #fff;
  background-image: linear-gradient(#8add6d,#60b044);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #5aad35;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px;
  background-color: #24292e;
  border-bottom: 1px solid #e5e5e5;
  font-size: 13px;
}

.c0 > *:last-child {
  margin-left: auto;
}

.c0:after {
  content: '';
  display: table;
  clear: both;
}

.c2 {
  float: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 3px;
}

.c2 label {
  border-right: 1px solid #ddd;
  padding: 4px 8px;
  color: #767676;
  font-size: 12px;
}

.c2 input {
  border: none;
  min-height: 26px;
}

<div
  className="c0"
>
  <div>
    <a
      className="c1"
      href="/"
    >
      GH
    </a>
  </div>
  <form
    className="c2"
  >
    <label
      htmlFor="input-search-query"
    >
      This repository
    </label>
    <input
      id="input-search-query"
      placeholder="Search"
      type="text"
    />
  </form>
  <div
    className="c3"
  >
    <a
      className="c4"
      href="/login"
    >
      Sign in
    </a>
    <a
      className="c5"
      href="/join"
    >
      Sign up
    </a>
  </div>
</div>
`;

exports[`Storyshots Home with default 1`] = `
.c0 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.c1 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.c1 li {
  padding: 12px 0;
}

.c1 li + li {
  border-top: 1px solid #f1f1f1;
}

.c2 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.c2 > * {
  padding: 12px;
}

.c3 {
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.c4 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.c4 > table > tbody > tr:first-child td {
  border: none;
}

.c4 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "display": "flex",
        "marginTop": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <ul
        className="c1"
      >
        <li>
          ACTIVITY_1
        </li>
        <li>
          ACTIVITY_2
        </li>
        <li>
          ACTIVITY_3
        </li>
      </ul>
    </div>
    <div
      style={
        Object {
          "marginLeft": "24px",
          "width": "320px",
        }
      }
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          Public Repositories
        </div>
        <div
          className="c4"
        >
          <ul
            className="c1"
          >
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME1"
              >
                FULL_NAME1
              </a>
            </li>
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME2"
              >
                FULL_NAME2
              </a>
            </li>
            <li>
              <i
                className="fa fa-folder-open-o"
              />
               
              <a
                href="/FULL_NAME3"
              >
                FULL_NAME3
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots New with default 1`] = `
.c0 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.c4 {
  display: inline-block;
  color: #fff;
  background-image: linear-gradient(#8add6d,#60b044);
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  border: 1px solid #5aad35;
  border-radius: 3px;
  font-size: 14px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  margin-bottom: 8px;
  display: block;
}

.c2 > label {
  display: block;
  margin-bottom: 8px;
  font-weight: 600;
}

.c3 {
  margin-bottom: 8px;
  display: inline-block;
}

.c3 > label {
  display: block;
  margin-bottom: 8px;
  font-weight: 600;
}

.c1 {
  margin: 0;
  font-size: 14px;
  color: #767676;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "borderBottom": "1px solid #e5e5e5",
        "marginBottom": "32px",
        "marginTop": "24px",
        "paddingBottom": "8px",
      }
    }
  >
    <h2
      style={
        Object {
          "marginBottom": "0",
        }
      }
    >
      Create a new repository
    </h2>
    <p
      className="c1"
    >
      A repository contains all the files for your project, including the revision history.
    </p>
  </div>
  <form
    action="/api/v1/user/repos"
    method="post"
    onSubmit={[Function]}
  >
    <input
      name="authenticity_token"
      type="hidden"
      value="TRUE"
    />
    <div>
      <div
        className="c2"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <label
          htmlFor="owner"
        >
          Owner
        </label>
        <input
          id="owner"
          name="owner"
          type="text"
        />
      </div>
      <span>
         / 
      </span>
      <div
        className="c3"
      >
        <label
          htmlFor="name"
        >
          Repository name
        </label>
        <input
          id="name"
          name="name"
          type="text"
        />
      </div>
    </div>
    <div
      className="c2"
    >
      <label
        htmlFor="description"
      >
        Description (optional)
      </label>
      <input
        id="description"
        name="description"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
      />
    </div>
    <hr />
    <div
      className="c2"
    >
      <label>
        <input
          name="public"
          type="radio"
          value="true"
        />
        Public
      </label>
      <p
        className="c1"
      >
        Anyone can see this repository. You choose who can commit.
      </p>
    </div>
    <div
      className="c2"
    >
      <label>
        <input
          name="public"
          type="radio"
          value="false"
        />
        Private
      </label>
      <p
        className="c1"
      >
        You choose who can see and commit to this repository.
      </p>
    </div>
    <hr />
    <button
      className="c4"
    >
      Create repository
    </button>
  </form>
</div>
`;

exports[`Storyshots Repository/Branches with default 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.c3 li {
  padding: 12px 0;
}

.c3 li + li {
  border-top: 1px solid #f1f1f1;
}

.c0 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.c0 > * {
  padding: 12px;
}

.c1 {
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.c2 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.c2 > table > tbody > tr:first-child td {
  border: none;
}

.c2 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Default branch
    </div>
    <div
      className="c2"
    >
      <ul
        className="c3"
      >
        <li>
          <a
            href="/$OWNER/$REPO/tree/"
          >
            
          </a>
            Updated
           
          <time-ago
            datetime=""
          />
           by 
          <a
            href="/"
          >
            
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Active branches
    </div>
    <div
      className="c2"
    >
      <ul
        className="c3"
      >
        <li>
          <a
            href="/$OWNER/$REPO/tree/$BRANCH"
          >
            $BRANCH
          </a>
            Updated 
          <time-ago
            datetime="$DATE"
          />
           
          by 
          <a
            href="/$AUTHOR"
          >
            $AUTHOR
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Commit with default 1`] = `
.c5 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.c0 > * {
  padding: 12px;
}

.c6 {
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.c1 {
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.c3 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.c3 > table > tbody > tr:first-child td {
  border: none;
}

.c3 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.c7 {
  margin: 0;
}

.c8 {
  float: left;
  min-width: 48px;
  padding: 0.5em;
  margin: 0;
  list-style: none;
  font-size: 12px;
  line-height: 18px;
  color: rgba(0,0,0,0.3);
  text-align: right;
  border-right: 1px solid #eee;
}

.c9 {
  background-color: white;
}

.c4 > * {
  border-right-width: 0;
  border-radius: 0;
}

.c4 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.c4 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <h1
          style={
            Object {
              "color": "#213f4d",
              "fontSize": "18px",
              "fontWeight": "bold",
              "margin": "0",
            }
          }
        >
          $MESSAGE
        </h1>
        <a
          className="c2"
          href="/$OWNER/$REPO/tree/$SHA"
          style={
            Object {
              "float": "right",
            }
          }
        >
          Browse files
        </a>
      </div>
      <div
        style={
          Object {
            "color": "#818c90",
            "fontSize": "12px",
            "margin": "0",
            "minHeight": "18px",
          }
        }
      >
        <i
          className="fa fa-code-fork"
        />
         master
      </div>
    </div>
    <div
      className="c3"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          <img
            alt="$NAME"
            style={
              Object {
                "background": "#ccc",
                "height": 20,
                "verticalAlign": "middle",
                "width": 20,
              }
            }
          />
           
          $NAME
           commited on
           
          <time-ago
            datetime="$DATE"
          />
        </div>
        <div
          style={
            Object {
              "color": "#767676",
              "fontFamily": "Consolas, \\"Liberation Mono\\", Menlo, Courier, monospace",
              "fontSize": "12px",
              "lineHeight": "24px",
            }
          }
        >
          <span
            style={
              Object {
                "marginRight": "12px",
              }
            }
          >
            0
             parent
          </span>
          <span>
            commit 
            $SHA
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <i
        className="fa fa-file-text-o"
      />
       Showing N changed file with N addition and N deletion.
    </div>
    <div>
      <div
        className="c4"
      >
        <button
          className="c5"
        >
          Unified
        </button>
        <button
          className="c5"
        >
          Split
        </button>
      </div>
    </div>
  </div>
  <div
    id="patches"
  >
    <div
      className="c0"
    >
      <div
        className="c6"
      >
        $FILENAME
      </div>
      <div
        className="c3"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <pre
          className="c7"
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <ul
            className="c8"
          >
            <li>
              ...
            </li>
            <li>
              1
            </li>
            <li>
              2
            </li>
            <li>
              3
            </li>
            <li>
              4
            </li>
            <li>
              5
            </li>
            <li>
              6
            </li>
            <li>
              7
            </li>
            <li>
              8
            </li>
            <li>
              9
            </li>
            <li>
              10
            </li>
            <li>
              11
            </li>
          </ul>
          <code
            className="hljs c9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "$PATCH",
              }
            }
          />
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Commits with default 1`] = `
.c5 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > * {
  border-right-width: 0;
  border-radius: 0;
}

.c4 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.c4 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.c0 {
  padding: 0;
  margin: 0;
  list-style: none;
  border-right: 1px solid #eee;
  border-bottom: 1px solid #eee;
  border-left: 1px solid #eee;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  border-top: 1px solid #eee;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .title {
  font-size: 15px;
  font-weight: bold;
  color: #333;
}

.c2 .meta {
  font-weight: normal;
  color: #767676;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        <div
          className="title"
        >
          $MESSAGE_1
        </div>
        <div
          className="meta"
        >
          <a
            onClick={[Function]}
            style={Object {}}
          >
            <img
              alt=""
              src=""
            />
          </a>
          $NAME_1
           commited on
           
          <time-ago
            datetime="$DATE_1"
          />
        </div>
      </div>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <button
          className="c5"
        >
          <i
            className="fa fa-clipboard"
          />
        </button>
        <a
          className="c5"
          onClick={[Function]}
          small="true"
          style={Object {}}
          transparent="true"
        >
          $SHA_1
        </a>
      </div>
      <a
        className="c5"
        onClick={[Function]}
        small="true"
        style={
          Object {
            "marginLeft": "12px",
          }
        }
        transparent="true"
      >
        <i
          className="fa fa-code"
        />
      </a>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        <div
          className="title"
        >
          $MESSAGE_2
        </div>
        <div
          className="meta"
        >
          <a
            onClick={[Function]}
            style={Object {}}
          >
            <img
              alt=""
              src=""
            />
          </a>
          $NAME_2
           commited on
           
          <time-ago
            datetime="$DATE_2"
          />
        </div>
      </div>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <button
          className="c5"
        >
          <i
            className="fa fa-clipboard"
          />
        </button>
        <a
          className="c5"
          onClick={[Function]}
          small="true"
          style={Object {}}
          transparent="true"
        >
          $SHA_2
        </a>
      </div>
      <a
        className="c5"
        onClick={[Function]}
        small="true"
        style={
          Object {
            "marginLeft": "12px",
          }
        }
        transparent="true"
      >
        <i
          className="fa fa-code"
        />
      </a>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Repository/FileContent with default 1`] = `
.c5 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.c0 > * {
  padding: 12px;
}

.c3 {
  background-color: #f7f7f7;
  border-bottom: 1px solid;
  border-color: #d8d8d8;
}

.c1 {
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.c2 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.c2 > table > tbody > tr:first-child td {
  border: none;
}

.c2 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.c6 {
  margin: 0;
}

.c7 {
  float: left;
  min-width: 48px;
  padding: 0.5em;
  margin: 0;
  list-style: none;
  font-size: 12px;
  line-height: 18px;
  color: rgba(0,0,0,0.3);
  text-align: right;
  border-right: 1px solid #eee;
}

.c8 {
  background-color: white;
}

.c4 > * {
  border-right-width: 0;
  border-radius: 0;
}

.c4 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.c4 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      commit tease
    </div>
    <div
      className="c2"
      id="contributors"
    >
      <button>
        2
         contributors
      </button>
      <a
        onClick={[Function]}
        style={Object {}}
      >
        <img
          alt="$CONTRIBUTOR_1"
          style={
            Object {
              "background": "#ccc",
              "height": 20,
              "verticalAlign": "middle",
              "width": 20,
            }
          }
        />
      </a>
      <a
        onClick={[Function]}
        style={Object {}}
      >
        <img
          alt="$CONTRIBUTOR_2"
          style={
            Object {
              "background": "#ccc",
              "height": 20,
              "verticalAlign": "middle",
              "width": 20,
            }
          }
        />
      </a>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c3"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          1
           line | 
          10
           bytes
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="c4"
          >
            <a
              className="c5"
              onClick={[Function]}
              small="true"
              style={Object {}}
            >
              Raw
            </a>
            <a
              className="c5"
              onClick={[Function]}
              small="true"
              style={Object {}}
            >
              Blame
            </a>
            <a
              className="c5"
              onClick={[Function]}
              small="true"
              style={Object {}}
            >
              History
            </a>
          </div>
          <button
            style={
              Object {
                "margin": "0 6px",
              }
            }
          >
            <i
              className="fa fa-pencil"
            />
          </button>
          <button>
            <i
              className="fa fa-trash"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <pre
        className="c6"
      >
        <ul
          className="c7"
        >
          <li>
            1
          </li>
        </ul>
        <code
          className="hljs c8"
          dangerouslySetInnerHTML={
            Object {
              "__html": "$CONTENT",
            }
          }
          id="content"
        />
      </pre>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Graphs with default 1`] = `
<div>
  <h2>
    graphs
  </h2>
</div>
`;

exports[`Storyshots Repository/Home with default 1`] = `
.c5 > div {
  position: absolute;
}

.c5 > div:before {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  content: '';
  z-index: 100;
}

.c5 > div > ul {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 300px;
  padding: 8px 0;
  margin: 0;
  list-style: none;
  font-weight: bold;
  background-color: #fff;
  border: 1px solid rgba(200,200,200,0.4);
  border-radius: 3px;
  box-shadow: 0 3px 12px rgba(0,0,0,0.15);
  z-index: 101;
}

.c5 > div > ul > li.Dropdown__divider {
  margin: 8px 0;
  border-top: 1px solid #e5e5e5;
}

.c5 > div > ul > li > * {
  display: block;
  padding: 4px 12px;
}

.c5 > div > ul > li > a:hover {
  color: #fff;
  background-color: #4078c0;
}

.c2 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: inline-block;
  color: #fff;
  background-image: linear-gradient(#8add6d,#60b044);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #5aad35;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.c9 > * {
  padding: 12px;
}

.c10 {
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.c11 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.c11 > table > tbody > tr:first-child td {
  border: none;
}

.c11 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.c7 > * {
  border-right-width: 0;
  border-radius: 0;
}

.c7 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.c7 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.c8 table tr td.icon {
  width: 18px;
  padding-left: 12px;
}

.c8 table tr td.commitMessage {
  padding-left: 12px;
}

.c8 table tr td.commitMessage a {
  color: #888;
}

.c8 table tr td.updateAt {
  width: 120px;
  padding-right: 12px;
  text-align: right;
}

.c8 .sha {
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
  font-size: 90%;
  color: #445055;
}

.c3 {
  padding: 8px 10px;
  line-height: 16px;
  background: #f5f5f5;
  border-bottom: 1px solid #e5e5e5;
  font-size: 12px;
  font-weight: 600;
  color: #333;
}

.c4 {
  background-color: #fff;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c4 > li > a {
  display: block;
  padding: 8px 8px 8px 30px;
  border-bottom: 1px solid #eee;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > li > a:hover {
  color: #fff;
  background-color: #4078c0;
}

.c0 .metaContent {
  font-size: 16px;
  color: #666;
}

.c0 .fileNavigation {
  margin-top: 12px;
}

.c0 .fileNavigation > * {
  margin-right: 12px;
}

.c0 .fileNavigation:after {
  content: '';
  display: table;
  clear: both;
}

.c0 .treeSelector {
  float: left;
}

.c0 .floatRight {
  float: right;
}

.c0 .inline {
  display: inline-block;
}

.c0 .commitTease {
  padding: 10px;
  margin: 12px 0 0 0;
  color: #68777d;
  background-color: #f2f9fc;
  border: 1px solid #c9e6f2;
  border-radius: 3px 3px 0 0;
}

.c0 .cloneModal {
  padding: 12px;
}

.c0 .cloneModal h2 {
  margin: 0;
  font-size: 16px;
}

.c0 .cloneModal p {
  margin: 4px 0;
  font-size: 12px;
}

.c0 .cloneUri {
  font-size: 12px;
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  border: 1px solid #ccc;
  border-radius: 3px;
  list-style: none;
  padding: 12px;
  margin: 12px 0 0 0;
}

.c1 a {
  color: #767676;
}

.c1 .fa {
  margin-right: 4px;
}

<div
  className="c0"
>
  <div
    className="metaContent"
  >
    <span>
      No description or website provided.
    </span>
    <span>
      - 
      <button>
        Edit
      </button>
    </span>
  </div>
  <nav>
    <ul
      className="c0 c1"
    >
      <li>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-clock-o"
          />
          <span>
            0
          </span>
           commits
        </a>
      </li>
      <li>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-code-fork"
          />
          <span>
            0
          </span>
           branches
        </a>
      </li>
      <li>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-tag"
          />
          <span>
            0
          </span>
           releases
        </a>
      </li>
      <li>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-users"
          />
          <span>
            10
          </span>
           contributors
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="fileNavigation"
  >
    <div
      className="treeSelector"
    >
      <div>
        <button
          className="c2"
          onClick={[Function]}
        >
          <i>
            Branch: 
          </i>
          <span>
            $TREE
             
          </span>
          <i
            className="fa fa-caret-down"
          />
        </button>
        <div
          className="modal"
          style={
            Object {
              "display": "none",
              "position": "absolute",
              "width": 300,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundClip": "padding-box",
                "backgroundColor": "#fff",
                "border": "1px solid rgba(200, 200, 200, 0.4)",
                "borderRadius": "3px",
                "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
                "position": "absolute",
                "width": "100%",
                "zIndex": 100,
              }
            }
          >
            <div
              className="c3"
            >
              Switch branches/tags
              <button
                onClick={[Function]}
                style={
                  Object {
                    "background": "none",
                    "border": 0,
                    "color": "#ccc",
                    "cursor": "pointer",
                    "float": "right",
                  }
                }
              >
                <i
                  className="fa fa-close"
                />
              </button>
            </div>
            <div
              style={
                Object {
                  "backgroundColor": "#f8f8f8",
                }
              }
            >
              <div
                style={
                  Object {
                    "padding": "10px 10px 0",
                  }
                }
              >
                <input
                  placeholder="Find a tag..."
                  style={
                    Object {
                      "border": "1px solid #ddd",
                      "borderRadius": "3px",
                      "lineHeight": "20px",
                      "padding": "6px",
                      "width": "100%",
                    }
                  }
                />
              </div>
              <div>
                <ul
                  style={
                    Object {
                      "borderBottom": "1px solid #ddd",
                      "listStyle": "none",
                      "margin": 0,
                      "padding": "8px 8px 0",
                    }
                  }
                >
                  <li
                    style={
                      Object {
                        "backgroundColor": "#fff",
                        "borderLeft": "1px solid #ddd",
                        "borderRight": "1px solid #ddd",
                        "borderTop": "1px solid #ddd",
                        "borderTopLeftRadius": 3,
                        "borderTopRightRadius": 3,
                        "float": "left",
                        "marginBottom": "-1px",
                      }
                    }
                  >
                    <a
                      href="#"
                      onClick={[Function]}
                      style={
                        Object {
                          "color": "#333",
                          "display": "block",
                          "fontSize": "11px",
                          "fontWeight": "bold",
                          "padding": "4px 8px 2px",
                          "textDecoration": "none",
                        }
                      }
                    >
                      Branches
                    </a>
                  </li>
                  <li
                    style={
                      Object {
                        "float": "left",
                        "marginBottom": "-1px",
                      }
                    }
                  >
                    <a
                      href="#"
                      onClick={[Function]}
                      style={
                        Object {
                          "color": "#888",
                          "display": "block",
                          "fontSize": "11px",
                          "fontWeight": "bold",
                          "padding": "4px 8px 2px",
                          "textDecoration": "none",
                        }
                      }
                    >
                      Tags
                    </a>
                  </li>
                  <div
                    style={
                      Object {
                        "clear": "both",
                        "display": "table",
                      }
                    }
                  />
                </ul>
                <div
                  style={
                    Object {
                      "display": "block",
                    }
                  }
                >
                  <div
                    className="c4"
                  />
                </div>
                <div
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <div
                    className="c4"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "fixed",
                "right": 0,
                "top": 0,
                "zIndex": 1,
              }
            }
          />
        </div>
      </div>
    </div>
    <a
      className="c2"
      href="$OWNER/$REPO/pull/new/$TREE"
    >
      New pull request
    </a>
    <div
      className="floatRight"
      style={
        Object {
          "marginRight": 0,
        }
      }
    >
      <span
        className="c5"
        width={300}
      >
        <button
          className="c6"
          onClick={[Function]}
        >
          Clone or download
        </button>
      </span>
    </div>
    <div
      className="floatRight"
    >
      <div
        className="c7"
      >
        <input
          className="c2"
          type="submit"
          value="Create new file"
        />
        <a
          className="c2"
          href="$OWNER/$REPO/upload/$TREE"
        >
          Upload files
        </a>
        <a
          className="c2"
          href="$OWNER/$REPO/find/$TREE"
        >
          Find file
        </a>
      </div>
    </div>
  </div>
  <div
    className="c0 c8 c9"
  >
    <div
      className="c10"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          <img
            alt="$NAME_1"
            style={
              Object {
                "background": "#ccc",
                "height": 20,
                "verticalAlign": "middle",
                "width": 20,
              }
            }
          />
           
          <a
            href="/$NAME_1"
          >
            $NAME_1
          </a>
           
          <a
            onClick={[Function]}
            style={Object {}}
          >
            $MESSAGE_1
          </a>
        </div>
        <div>
          Latest commit 
          <a
            className="sha"
            onClick={[Function]}
            style={Object {}}
          >
            $SHA_1
          </a>
           
          <time-ago
            datetime="$DATE_1"
          />
        </div>
      </div>
    </div>
    <div
      className="c11"
    >
      <table>
        <tbody>
          <tr>
            <td
              className="icon"
            >
              <i
                className="fa fa-file-text-o"
              />
            </td>
            <td
              className="name"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                $PATH_1
              </a>
            </td>
            <td
              className="commitMessage"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                $MESSAGE_1
              </a>
            </td>
            <td
              className="updateAt"
            >
              <time-ago
                datetime="$DATE_1"
              />
            </td>
          </tr>
          <tr>
            <td
              className="icon"
            >
              <i
                className="fa fa-file-text-o"
              />
            </td>
            <td
              className="name"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                $PATH_2
              </a>
            </td>
            <td
              className="commitMessage"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                $MESSAGE_1
              </a>
            </td>
            <td
              className="updateAt"
            >
              <time-ago
                datetime="$DATE_1"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Issues with default 1`] = `
.c1 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 14px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > * {
  border-right-width: 0;
  border-radius: 0;
}

.c2 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.c2 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.c0 .subnav > * {
  display: inline-block;
  margin-right: 12px;
}

.c0 .filter {
  display: inline-block;
}

.c0 .filter:after {
  content: ' ';
  display: table;
  clear: both;
}

.c0 .filter button {
  padding: 6px 10px;
  border-radius: 3px 0 0 3px;
}

.c0 .filter form {
  margin-left: -1px;
  position: relative;
  display: inline-block;
}

.c0 .filter form i {
  position: absolute;
  top: 10px;
  left: 6px;
}

.c0 .filter input {
  width: 320px;
  padding: 6px 10px 6px 32px;
  color: #767676;
  border: 1px solid #d5d5d5;
  border-radius: 0 3px 3px 0;
  line-height: 20px;
}

.c0 .issuesHeader {
  position: relative;
  padding: 12px 12px;
  margin-top: 20px;
  background-color: #f8f8f8;
  border: 1px solid #e5e5e5;
  border-radius: 3px 3px 0 0;
}

.c0 .issuesHeader > * {
  display: inline-block;
  margin-right: 12px;
}

.c0 .issues {
  list-style: none;
  padding: 0;
  margin: 0;
  border-right: 1px solid #eee;
  border-bottom: 1px solid #eee;
  border-left: 1px solid #eee;
}

.c0 .issue {
  padding: 12px 12px;
  border-top: 1px solid #eee;
}

.c0 .issue:first-child {
  border-top: none;
}

.c0 .issue:after {
  content: ' ';
  display: table;
  clear: both;
}

.c0 .issue .icon {
  float: left;
  color: #6cc644;
}

.c0 .issue .main {
  float: left;
  margin-left: 12px;
}

.c0 .issue .main .title {
  color: #333;
  font-size: 16px;
}

.c0 .issue .main .sub {
  font-size: 12px;
}

.c0 .issue .comments {
  float: right;
}

<div
  className="c0"
>
  <div
    className="subnav"
  >
    <div
      className="filter"
    >
      <button
        className="c1"
      >
        Filters
      </button>
      <form>
        <i
          className="fa fa-search"
        />
        <input />
      </form>
    </div>
    <div
      className="c2"
    >
      <a
        className="c3"
        onClick={[Function]}
        style={Object {}}
        transparent="true"
      >
        Labels
      </a>
      <a
        className="c3"
        onClick={[Function]}
        style={Object {}}
        transparent="true"
      >
        Milestones
      </a>
    </div>
  </div>
  <div
    className="issuesHeader"
  >
    <div>
      <a
        onClick={[Function]}
        style={Object {}}
      >
        <i
          className="fa fa-exclamation-circle"
        />
         
        2
         Open
      </a>
    </div>
    <div>
      <a
        onClick={[Function]}
        style={Object {}}
      >
        <i
          className="fa fa-check"
        />
         
        -1
         Closed
      </a>
    </div>
  </div>
  <ul
    className="issues"
  >
    <li
      className="issue"
    >
      <div
        className="icon"
      >
        <i
          className="fa fa-exclamation-circle"
        />
      </div>
      <div
        className="main"
      >
        <div
          className="title"
        >
          <a
            onClick={[Function]}
            style={Object {}}
          >
            $TITLE_1
          </a>
        </div>
        <div
          className="sub"
        >
          <span>
            #
            1
          </span>
           opened
           
          <time-ago
            datetime="$CREATED_AT_1"
          />
           by
           
          <a
            onClick={[Function]}
            style={Object {}}
          >
            $CREATED_BY_1
          </a>
        </div>
      </div>
      <div
        className="comments"
      >
        <div>
          <a
            onClick={[Function]}
            style={Object {}}
          >
            <i
              className="fa fa-comment-o"
            />
             
            1
          </a>
        </div>
      </div>
    </li>
    <li
      className="issue"
    >
      <div
        className="icon"
      >
        <i
          className="fa fa-exclamation-circle"
        />
      </div>
      <div
        className="main"
      >
        <div
          className="title"
        >
          <a
            onClick={[Function]}
            style={Object {}}
          >
            $TITLE_2
          </a>
        </div>
        <div
          className="sub"
        >
          <span>
            #
            2
          </span>
           opened
           
          <time-ago
            datetime="$CREATED_AT_2"
          />
           by
           
          <a
            onClick={[Function]}
            style={Object {}}
          >
            $CREATED_BY_2
          </a>
        </div>
      </div>
      <div
        className="comments"
      >
        <div>
          <a
            onClick={[Function]}
            style={Object {}}
          >
            <i
              className="fa fa-comment-o"
            />
             
            2
          </a>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Repository/Milestones with default 1`] = `
<div>
  <h2>
    milestones
  </h2>
</div>
`;

exports[`Storyshots Repository/Projects with default 1`] = `
<div>
  <h2>
    projects
  </h2>
</div>
`;

exports[`Storyshots Repository/Pulse with default 1`] = `
<div>
  <h2>
    pulse
  </h2>
</div>
`;

exports[`Storyshots Repository/Settings with default 1`] = `
<div>
  <h2>
    settings
  </h2>
</div>
`;

exports[`Storyshots Repository/Tree with default 1`] = `
.c0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.c4 > * {
  padding: 12px;
}

.c5 {
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.c6 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.c6 > table > tbody > tr:first-child td {
  border: none;
}

.c6 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.c3 table tr td.icon {
  width: 18px;
  padding-left: 12px;
}

.c3 table tr td.commitMessage {
  padding-left: 12px;
}

.c3 table tr td.commitMessage a {
  color: #888;
}

.c3 table tr td.updateAt {
  width: 120px;
  padding-right: 12px;
  text-align: right;
}

.c3 .sha {
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
  font-size: 90%;
  color: #445055;
}

.c1 {
  padding: 8px 10px;
  line-height: 16px;
  background: #f5f5f5;
  border-bottom: 1px solid #e5e5e5;
  font-size: 12px;
  font-weight: 600;
  color: #333;
}

.c2 {
  background-color: #fff;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c2 > li > a {
  display: block;
  padding: 8px 8px 8px 30px;
  border-bottom: 1px solid #eee;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > li > a:hover {
  color: #fff;
  background-color: #4078c0;
}

<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "marginBottom": "12px",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "12px",
        }
      }
    >
      <div>
        <button
          className="c0"
          onClick={[Function]}
        >
          <i>
            Branch: 
          </i>
          <span>
            #TREE
             
          </span>
          <i
            className="fa fa-caret-down"
          />
        </button>
        <div
          className="modal"
          style={
            Object {
              "display": "none",
              "position": "absolute",
              "width": 300,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundClip": "padding-box",
                "backgroundColor": "#fff",
                "border": "1px solid rgba(200, 200, 200, 0.4)",
                "borderRadius": "3px",
                "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
                "position": "absolute",
                "width": "100%",
                "zIndex": 100,
              }
            }
          >
            <div
              className="c1"
            >
              Switch branches/tags
              <button
                onClick={[Function]}
                style={
                  Object {
                    "background": "none",
                    "border": 0,
                    "color": "#ccc",
                    "cursor": "pointer",
                    "float": "right",
                  }
                }
              >
                <i
                  className="fa fa-close"
                />
              </button>
            </div>
            <div
              style={
                Object {
                  "backgroundColor": "#f8f8f8",
                }
              }
            >
              <div
                style={
                  Object {
                    "padding": "10px 10px 0",
                  }
                }
              >
                <input
                  placeholder="Find a tag..."
                  style={
                    Object {
                      "border": "1px solid #ddd",
                      "borderRadius": "3px",
                      "lineHeight": "20px",
                      "padding": "6px",
                      "width": "100%",
                    }
                  }
                />
              </div>
              <div>
                <ul
                  style={
                    Object {
                      "borderBottom": "1px solid #ddd",
                      "listStyle": "none",
                      "margin": 0,
                      "padding": "8px 8px 0",
                    }
                  }
                >
                  <li
                    style={
                      Object {
                        "backgroundColor": "#fff",
                        "borderLeft": "1px solid #ddd",
                        "borderRight": "1px solid #ddd",
                        "borderTop": "1px solid #ddd",
                        "borderTopLeftRadius": 3,
                        "borderTopRightRadius": 3,
                        "float": "left",
                        "marginBottom": "-1px",
                      }
                    }
                  >
                    <a
                      href="#"
                      onClick={[Function]}
                      style={
                        Object {
                          "color": "#333",
                          "display": "block",
                          "fontSize": "11px",
                          "fontWeight": "bold",
                          "padding": "4px 8px 2px",
                          "textDecoration": "none",
                        }
                      }
                    >
                      Branches
                    </a>
                  </li>
                  <li
                    style={
                      Object {
                        "float": "left",
                        "marginBottom": "-1px",
                      }
                    }
                  >
                    <a
                      href="#"
                      onClick={[Function]}
                      style={
                        Object {
                          "color": "#888",
                          "display": "block",
                          "fontSize": "11px",
                          "fontWeight": "bold",
                          "padding": "4px 8px 2px",
                          "textDecoration": "none",
                        }
                      }
                    >
                      Tags
                    </a>
                  </li>
                  <div
                    style={
                      Object {
                        "clear": "both",
                        "display": "table",
                      }
                    }
                  />
                </ul>
                <div
                  style={
                    Object {
                      "display": "block",
                    }
                  }
                >
                  <div
                    className="c2"
                  >
                    <li>
                      <a
                        href="/#OWNER/#REPO/tree/#BRANCH_1"
                      >
                        #BRANCH_1
                      </a>
                    </li>
                    <li>
                      <a
                        href="/#OWNER/#REPO/tree/#BRANCH_2"
                      >
                        #BRANCH_2
                      </a>
                    </li>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                >
                  <div
                    className="c2"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "fixed",
                "right": 0,
                "top": 0,
                "zIndex": 1,
              }
            }
          />
        </div>
      </div>
    </div>
    <div>
      <strong>
        <a
          onClick={[Function]}
          style={Object {}}
        >
          #REPO
        </a>
      </strong>
      <span
        style={
          Object {
            "margin": "0 6px",
          }
        }
      >
        /
      </span>
      <strong>
        #SPLAT
      </strong>
      <span
        style={
          Object {
            "margin": "0 6px",
          }
        }
      >
        /
      </span>
    </div>
  </div>
  <div
    className="c3 c4"
  >
    <div
      className="c5"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-between",
          }
        }
      >
        <div>
          <img
            alt="#NAME_1"
            style={
              Object {
                "background": "#ccc",
                "height": 20,
                "verticalAlign": "middle",
                "width": 20,
              }
            }
          />
           
          <a
            href="/#NAME_1"
          >
            #NAME_1
          </a>
           
          <a
            onClick={[Function]}
            style={Object {}}
          >
            #MESSAGE_1
          </a>
        </div>
        <div>
          Latest commit 
          <a
            className="sha"
            onClick={[Function]}
            style={Object {}}
          >
            #SHA_1
          </a>
           
          <time-ago
            datetime="#DATE_1"
          />
        </div>
      </div>
    </div>
    <div
      className="c6"
    >
      <table>
        <tbody>
          <tr>
            <td
              className="icon"
            >
              <i
                className="fa fa-file-text-o"
              />
            </td>
            <td
              className="name"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                #PATH_1
              </a>
            </td>
            <td
              className="commitMessage"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                #MESSAGE_1
              </a>
            </td>
            <td
              className="updateAt"
            >
              <time-ago
                datetime="#DATE_1"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots Repository/Tree__Breadcrumbs with 3rd level path 1`] = `
<div>
  <strong>
    <a
      onClick={[Function]}
      style={Object {}}
    >
      bar
    </a>
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <a
    onClick={[Function]}
    style={Object {}}
  >
    a
  </a>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <a
    onClick={[Function]}
    style={Object {}}
  >
    b
  </a>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <strong>
    c
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
</div>
`;

exports[`Storyshots Repository/Tree__Breadcrumbs with default 1`] = `
<div>
  <strong>
    <a
      onClick={[Function]}
      style={Object {}}
    >
      bar
    </a>
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
  <strong>
    SPLAT
  </strong>
  <span
    style={
      Object {
        "margin": "0 6px",
      }
    }
  >
    /
  </span>
</div>
`;

exports[`Storyshots Repository/Wiki with default 1`] = `
<div>
  <h2>
    wiki
  </h2>
</div>
`;

exports[`Storyshots Repository/shared/Entries with default 1`] = `
.c1 {
  position: relative;
  border: 1px solid #d8d8d8;
  border-radius: 3px;
  margin-bottom: 24px;
}

.c1 > * {
  padding: 12px;
}

.c2 {
  background-color: #f2f9fc;
  border-bottom: 1px solid;
  border-color: #c9e6f2;
}

.c3 > table {
  width: 100%;
  border-collapse: collapse;
  line-height: 20px;
}

.c3 > table > tbody > tr:first-child td {
  border: none;
}

.c3 > table > tbody > tr > td {
  padding: 6px 3px;
  border-top: 1px solid #eee;
  color: #888;
}

.c0 table tr td.icon {
  width: 18px;
  padding-left: 12px;
}

.c0 table tr td.commitMessage {
  padding-left: 12px;
}

.c0 table tr td.commitMessage a {
  color: #888;
}

.c0 table tr td.updateAt {
  width: 120px;
  padding-right: 12px;
  text-align: right;
}

.c0 .sha {
  font-family: Consolas,'Liberation Mono',Menlo,Courier,monospace;
  font-size: 90%;
  color: #445055;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
        }
      }
    >
      <div>
        <img
          alt="#NAME_1"
          style={
            Object {
              "background": "#ccc",
              "height": 20,
              "verticalAlign": "middle",
              "width": 20,
            }
          }
        />
         
        <a
          href="/#NAME_1"
        >
          #NAME_1
        </a>
         
        <a
          onClick={[Function]}
          style={Object {}}
        >
          #MESSAGE_1
        </a>
      </div>
      <div>
        Latest commit 
        <a
          className="sha"
          onClick={[Function]}
          style={Object {}}
        >
          #SHA_1
        </a>
         
        <time-ago
          datetime="#DATE_1"
        />
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <table>
      <tbody>
        <tr>
          <td
            className="icon"
          >
            <i
              className="fa fa-file-text-o"
            />
          </td>
          <td
            className="name"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              #PATH_1
            </a>
          </td>
          <td
            className="commitMessage"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              #MESSAGE_1
            </a>
          </td>
          <td
            className="updateAt"
          >
            <time-ago
              datetime="#DATE_1"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Repository/shared/TreeSelector with default 1`] = `
.c0 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  padding: 8px 10px;
  line-height: 16px;
  background: #f5f5f5;
  border-bottom: 1px solid #e5e5e5;
  font-size: 12px;
  font-weight: 600;
  color: #333;
}

.c2 {
  background-color: #fff;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c2 > li > a {
  display: block;
  padding: 8px 8px 8px 30px;
  border-bottom: 1px solid #eee;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > li > a:hover {
  color: #fff;
  background-color: #4078c0;
}

<div>
  <button
    className="c0"
    onClick={[Function]}
  >
    <i>
      Branch: 
    </i>
    <span>
      $TREE
       
    </span>
    <i
      className="fa fa-caret-down"
    />
  </button>
  <div
    className="modal"
    style={
      Object {
        "display": "none",
        "position": "absolute",
        "width": 300,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundClip": "padding-box",
          "backgroundColor": "#fff",
          "border": "1px solid rgba(200, 200, 200, 0.4)",
          "borderRadius": "3px",
          "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
          "position": "absolute",
          "width": "100%",
          "zIndex": 100,
        }
      }
    >
      <div
        className="c1"
      >
        Switch branches/tags
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "none",
              "border": 0,
              "color": "#ccc",
              "cursor": "pointer",
              "float": "right",
            }
          }
        >
          <i
            className="fa fa-close"
          />
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#f8f8f8",
          }
        }
      >
        <div
          style={
            Object {
              "padding": "10px 10px 0",
            }
          }
        >
          <input
            placeholder="Find a tag..."
            style={
              Object {
                "border": "1px solid #ddd",
                "borderRadius": "3px",
                "lineHeight": "20px",
                "padding": "6px",
                "width": "100%",
              }
            }
          />
        </div>
        <div>
          <ul
            style={
              Object {
                "borderBottom": "1px solid #ddd",
                "listStyle": "none",
                "margin": 0,
                "padding": "8px 8px 0",
              }
            }
          >
            <li
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderLeft": "1px solid #ddd",
                  "borderRight": "1px solid #ddd",
                  "borderTop": "1px solid #ddd",
                  "borderTopLeftRadius": 3,
                  "borderTopRightRadius": 3,
                  "float": "left",
                  "marginBottom": "-1px",
                }
              }
            >
              <a
                href="#"
                onClick={[Function]}
                style={
                  Object {
                    "color": "#333",
                    "display": "block",
                    "fontSize": "11px",
                    "fontWeight": "bold",
                    "padding": "4px 8px 2px",
                    "textDecoration": "none",
                  }
                }
              >
                Branches
              </a>
            </li>
            <li
              style={
                Object {
                  "float": "left",
                  "marginBottom": "-1px",
                }
              }
            >
              <a
                href="#"
                onClick={[Function]}
                style={
                  Object {
                    "color": "#888",
                    "display": "block",
                    "fontSize": "11px",
                    "fontWeight": "bold",
                    "padding": "4px 8px 2px",
                    "textDecoration": "none",
                  }
                }
              >
                Tags
              </a>
            </li>
            <div
              style={
                Object {
                  "clear": "both",
                  "display": "table",
                }
              }
            />
          </ul>
          <div
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="c2"
            >
              <li>
                <a
                  href="/$OWNER/$REPO/tree/$BRANCH"
                >
                  $BRANCH
                </a>
              </li>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              className="c2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Repository1 part of Navigations 1`] = `
.c1 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.c0 .reponav ul {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
}

.c0 .reponav a {
  display: block;
  padding: 7px 15px 8px;
  margin-bottom: -1px;
  color: #666;
}

.c0 .reponav .selected a {
  background-color: #fff;
  border-left: 1px solid #e5e5e5;
  border-top: 3px solid #d26911;
  border-right: 1px solid #e5e5e5;
}

.c0 .reponav .fa {
  margin-right: 0.5em;
}

<div
  className="c0 c1"
>
  <nav
    className="reponav"
  >
    <ul>
      <li
        className=""
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-code"
          />
          Code
        </a>
      </li>
      <li
        className=""
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-exclamation-circle"
          />
          Issues 
          1
        </a>
      </li>
      <li
        className="selected"
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-code-fork"
          />
          Pull requests 
          2
        </a>
      </li>
      <li
        className=""
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-group"
          />
          Projects 
          3
        </a>
      </li>
      <li
        className=""
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-line-chart"
          />
          Pulse
        </a>
      </li>
      <li
        className=""
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="fa fa-bar-chart"
          />
          Graphs
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots Repository1 with default 1`] = `
.c0 {
  width: 980px;
  margin-right: auto;
  margin-left: auto;
}

.c3 {
  display: inline-block;
  color: #333;
  background-image: linear-gradient(#fcfcfc,#eee);
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: inline-block;
  color: #333;
  background-color: transparent;
  background-image: none;
  position: relative;
  display: inline-block;
  padding: 3px 10px;
  border: 1px solid #d5d5d5;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > * {
  border-right-width: 0;
  border-radius: 0;
}

.c2 > *:first-child {
  border-right-width: 0;
  border-radius: 3px 0 0 3px;
}

.c2 > *:last-child {
  border-right-width: 1px;
  border-radius: 0 3px 3px 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 > nav {
  list-style: none;
  padding: 0;
}

.c1 > nav li {
  display: inline-block;
  margin-left: 12px;
}

.c1 > nav i:first-child {
  margin-right: 4px;
}

.c1 > nav .fa-caret-down {
  margin-left: 4px;
}

.c5 {
  background-color: #fff;
}

.c5 > ul {
  list-style: none;
  padding: 0;
}

.c5 > ul > li {
  padding: 8px;
  border-bottom: 1px solid #eee;
}

.c6 .reponav ul {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
}

.c6 .reponav a {
  display: block;
  padding: 7px 15px 8px;
  margin-bottom: -1px;
  color: #666;
}

.c6 .reponav .selected a {
  background-color: #fff;
  border-left: 1px solid #e5e5e5;
  border-top: 3px solid #d26911;
  border-right: 1px solid #e5e5e5;
}

.c6 .reponav .fa {
  margin-right: 0.5em;
}

<div>
  <div
    style={
      Object {
        "backgroundColor": "#fafafa",
        "borderBottom": "1px solid #eee",
        "marginBottom": "24px",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <h1
          style={
            Object {
              "color": "#666",
              "display": "inline-block",
              "fontSize": "18px",
            }
          }
        >
          <a
            href="/$OWNER"
          >
            $OWNER
          </a>
           / 
          <a
            href="/$OWNER/$REPO"
          >
            $REPO
          </a>
        </h1>
        <nav>
          <ul>
            <li>
              <div
                className="c2"
              >
                <button
                  className="c3"
                  onClick={[Function]}
                >
                  <i
                    className="fa fa-eye"
                  />
                  Watch
                  <i
                    className="fa fa-caret-down"
                  />
                </button>
                <a
                  className="c4"
                  href="#"
                >
                  6
                </a>
              </div>
            </li>
            <li>
              <div
                className="c2"
              >
                <button
                  className="c3"
                >
                  <i
                    className="fa fa-star"
                  />
                  Star
                </button>
                <a
                  className="c4"
                  href="#"
                >
                  4
                </a>
              </div>
            </li>
            <li>
              <div
                className="c2"
              >
                <button
                  className="c3"
                >
                  <i
                    className="fa fa-code-fork"
                  />
                  Fork
                </button>
                <a
                  className="c4"
                  href="#"
                >
                  1
                </a>
              </div>
            </li>
          </ul>
        </nav>
      </div>
      <div
        className="modal"
        style={
          Object {
            "display": "none",
            "position": "absolute",
            "width": undefined,
          }
        }
      >
        <div
          style={
            Object {
              "backgroundClip": "padding-box",
              "backgroundColor": "#fff",
              "border": "1px solid rgba(200, 200, 200, 0.4)",
              "borderRadius": "3px",
              "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
              "position": "absolute",
              "width": "100%",
              "zIndex": 100,
            }
          }
        >
          <div
            className="c5"
          >
            <div>
              Notifications
              <a
                href="#"
              >
                x
              </a>
            </div>
            <ul>
              <li>
                <a>
                  <span>
                    Not watching
                  </span>
                  <span>
                    Be notified when participating or @mentioned.
                  </span>
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Watching
                  </span>
                  <span>
                    Be notified of all conversations.
                  </span>
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Ignoring
                  </span>
                  <span>
                    Never be notified.
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          onClick={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
              "zIndex": 1,
            }
          }
        />
      </div>
    </div>
    <div
      className="c6 c0"
    >
      <nav
        className="reponav"
      >
        <ul>
          <li
            className="selected"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-code"
              />
              Code
            </a>
          </li>
          <li
            className=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-exclamation-circle"
              />
              Issues 
              2
            </a>
          </li>
          <li
            className=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-code-fork"
              />
              Pull requests 
              5
            </a>
          </li>
          <li
            className=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-group"
              />
              Projects 
              3
            </a>
          </li>
          <li
            className=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-book"
              />
              Wiki
            </a>
          </li>
          <li
            className=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-line-chart"
              />
              Pulse
            </a>
          </li>
          <li
            className=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-bar-chart"
              />
              Graphs
            </a>
          </li>
          <li
            className=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-gear"
              />
              Settings
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <div
    className="c0"
  >
    children
  </div>
</div>
`;
